--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,12 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "prisma": "^6.10.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.10.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
